--- a/notes/ts.html
+++ b/notes/ts.html
@@ -40,3 +40,31 @@
      传入的是什么类型 返回的就是什么类型
 window+鼠标,查看类型
 -->
+
+
+<!-- 
+
+
+    自定义的restful
+    package.json里面注入middleware
+    --middlewares __json_server_mock__/middleware.js
+    人性最难猜
+    心门已关
+    落花飞霞不能免
+    花开原是来年
+    泪落如雨如线
+
+    再见
+    明天我要离开,
+    熟悉的地方和你,
+    我不能答应你,
+    我是否会再回来,
+    不回头,
+    不回头的走下去......
+
+    虽然现在是21世纪了,不难发现某些女子的脑袋里装的还是裹脚布
+    男子也没有减掉挂在心中的辫子
+
+    有些观点不是用来理解的,而是用来筛选社交圈子的,正如有些狗会咬人,你不必要理解为什么畜生会咬人,
+    你研究那玩意儿干啥,你只要学会绕着它走就行了.
+ -->
